fix: stabilize CI mypy and pytest execution
Install required mypy stub packages in dev dependencies and run tests via python -m pytest to avoid module import resolution issues in CI shells.

Made-with: Cursor

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,4 @@ jobs:
       - name: Type-check with mypy
         run: .venv/bin/mypy ksa_opendata
       - name: Run tests
-        run: .venv/bin/pytest
+        run: .venv/bin/python -m pytest
